--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-react-head": "^1.1.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-source-mongodb": "^3.6.0",
     "gatsby-transformer-remark": "^4.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-head": "^3.4.0",
+    "react-helmet": "^6.1.0"
   }
 }
