--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^3.6.2",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-nprogress": "^4.8.0",
     "gatsby-plugin-react-head": "^1.1.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-styled-components": "^4.14.0",
