--- a/package.json
+++ b/package.json
@@ -15,31 +15,33 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.0.0",
-    "axios": "^0.21.4",
-    "babel-plugin-styled-components": "^1.13.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.2",
+    "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "email-validator": "^2.0.4",
     "gatsby": "^4.15.2",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-gatsby-cloud": "^2.6.1",
-    "gatsby-plugin-nprogress": "^4.8.0",
+    "gatsby-plugin-gatsby-cloud": "^4.15.0",
+    "gatsby-plugin-nprogress": "^4.15.0",
     "gatsby-plugin-react-head": "^1.1.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-sharp": "^4.15.1",
+    "gatsby-plugin-styled-components": "^5.15.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-source-mongodb": "^3.6.0",
-    "gatsby-transformer-remark": "^4.3.0",
-    "gatsby-transformer-sharp": "^3.13.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-source-mongodb": "^4.15.0",
+    "gatsby-transformer-remark": "^5.15.1",
+    "gatsby-transformer-sharp": "^4.15.1",
+    "npm-check-updates": "^13.1.1",
+    "postcss": "^8.4.14",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-head": "^3.4.0",
     "react-helmet": "^6.1.0",
-    "react-number-format": "^4.7.3",
-    "styled-components": "^5.3.1",
+    "react-number-format": "^4.9.3",
+    "styled-components": "^5.3.5",
     "use-query-params": "^1.2.3"
   }
 }
