--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-source-mongodb": "^4.15.0",
     "gatsby-transformer-remark": "^5.15.1",
     "gatsby-transformer-sharp": "^4.15.1",
+    "mui-datatables": "^4.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-head": "^3.4.0",
