--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.4",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "ejs": "^3.1.8",
     "email-validator": "^2.0.4",
     "force": "^0.0.3",
     "gatsby": "^4.15.2",
